--- a/src/output.css
+++ b/src/output.css
@@ -592,8 +592,24 @@ video {
   margin: 1rem;
 }
 
+.mb-24 {
+  margin-bottom: 6rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .flex {
   display: flex;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-20 {
@@ -604,8 +620,16 @@ video {
   width: 66.666667%;
 }
 
+.w-1\/5 {
+  width: 20%;
+}
+
 .flex-row {
   flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -618,6 +642,14 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .text-gray-400 {
