--- a/src/output.css
+++ b/src/output.css
@@ -604,6 +604,18 @@ video {
   inset: 0px;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -651,6 +663,10 @@ video {
 
 .h-8 {
   height: 2rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -725,6 +741,10 @@ video {
   justify-content: space-evenly;
 }
 
+.overscroll-none {
+  overscroll-behavior: none;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -747,6 +767,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
 .bg-orange-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
@@ -755,6 +780,11 @@ video {
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
+.bg-slate-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900 {
@@ -774,6 +804,10 @@ video {
   fill: #94a3b8;
 }
 
+.fill-slate-900 {
+  fill: #0f172a;
+}
+
 .fill-slate-950 {
   fill: #020617;
 }
@@ -786,9 +820,8 @@ video {
   padding: 1rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-8 {
+  padding: 2rem;
 }
 
 .text-5xl {
@@ -825,6 +858,11 @@ video {
   color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
+.text-slate-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
 .text-slate-950 {
   --tw-text-opacity: 1;
   color: rgb(2 6 23 / var(--tw-text-opacity));
@@ -838,6 +876,15 @@ video {
   opacity: 0.5;
 }
 
+.opacity-15 {
+  opacity: 0.15;
+}
+
+.brightness-150 {
+  --tw-brightness: brightness(1.5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -849,6 +896,10 @@ video {
 }
 
 @media not all and (min-width: 768px) {
+  .max-md\:pointer-events-none {
+    pointer-events: none;
+  }
+
   .max-md\:block {
     display: block;
   }
@@ -865,10 +916,6 @@ video {
     flex-direction: column;
   }
 
-  .max-md\:p-4 {
-    padding: 1rem;
-  }
-
   .max-md\:p-8 {
     padding: 2rem;
   }
@@ -880,17 +927,7 @@ video {
   }
 }
 
-@media (min-width: 768px) {
-  .md\:hidden {
-    display: none;
-  }
-}
-
 @media (min-width: 1024px) {
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
