--- a/src/output.css
+++ b/src/output.css
@@ -604,16 +604,24 @@ video {
   inset: 0px;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.m-20 {
+  margin: 5rem;
 }
 
 .mb-2 {
@@ -661,8 +669,21 @@ video {
   height: 1rem;
 }
 
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .h-8 {
   height: 2rem;
+}
+
+.h-9 {
+  height: 2.25rem;
 }
 
 .h-full {
@@ -671,6 +692,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-36 {
+  min-height: 9rem;
+}
+
+.min-h-48 {
+  min-height: 12rem;
 }
 
 .w-1\/2 {
@@ -689,12 +718,20 @@ video {
   width: 20%;
 }
 
+.w-1\/6 {
+  width: 16.666667%;
+}
+
 .w-2\/3 {
   width: 66.666667%;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-4\/6 {
@@ -721,8 +758,16 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -767,14 +812,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
 .bg-orange-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-300 {
@@ -802,6 +847,10 @@ video {
 
 .fill-slate-400 {
   fill: #94a3b8;
+}
+
+.fill-slate-600 {
+  fill: #475569;
 }
 
 .fill-slate-900 {
@@ -836,6 +885,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-gray-400 {
@@ -876,12 +929,13 @@ video {
   opacity: 0.5;
 }
 
-.opacity-15 {
-  opacity: 0.15;
+.drop-shadow-2xl {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.brightness-150 {
-  --tw-brightness: brightness(1.5);
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -912,6 +966,10 @@ video {
     width: 100vw;
   }
 
+  .max-md\:w-5\/6 {
+    width: 83.333333%;
+  }
+
   .max-md\:flex-col {
     flex-direction: column;
   }
@@ -924,6 +982,12 @@ video {
 @media not all and (min-width: 640px) {
   .max-sm\:hidden {
     display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:w-5\/6 {
+    width: 83.333333%;
   }
 }
 
